-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 14
-
Component/s: hotspot
-
b27
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8236343 | 15 | Matthias Baesken | P3 | Resolved | Fixed | team |
| JDK-8246419 | 13.0.4 | Matthias Baesken | P3 | Resolved | Fixed | b04 |
| JDK-8237822 | 11.0.7 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
There are a few sscanf calls in hotspot missing return value checking.
- backported by
-
JDK-8236343 handle return values of sscanf calls in hotspot
-
- Resolved
-
-
JDK-8237822 handle return values of sscanf calls in hotspot
-
- Resolved
-
-
JDK-8246419 handle return values of sscanf calls in hotspot
-
- Resolved
-
- relates to
-
JDK-8240360 NativeLibraryEvent has wrong library name on Linux
-
- Resolved
-