8235489: handle return values of sscanf calls in hotspot

Reviewed-by: clanger, kbarrett